@@ -48,6 +48,7 @@
 * Patch 3445049: Build fix for FreeBSD (Konstantin Tokarev)
 * Bug 3121217: Test suite fails on Linux x86_64: os.findlib broken
 * Patch 3428348: Add .gitignore file (Konstantin Tokarev)
+* Patch 3430158: Reorder LINKCMD for Gmake (rjmyst3)
 
 
 -------
